--- a/docker/designate/designate-central/Dockerfile
+++ b/docker/designate/designate-central/Dockerfile
@@ -1,4 +1,4 @@
-FROM %%KOLLA_NAMESPACE%%/%%KOLLA_PREFIX%%designate-base:90ae33a
+FROM %%KOLLA_NAMESPACE%%/%%KOLLA_PREFIX%%designate-base
 MAINTAINER Kolla Project (https://launchpad.net/kolla)
 
 ADD ./start.sh /start.sh
