--- a/compose/designate.yml
+++ b/compose/designate.yml
@@ -1,44 +1,51 @@
 # The DNSaaS REST api from where zones and records are added or removed.
 designateapi:
-  image: kollaglue/centos-rdo-designate-api:90ae33a
+  image: kollaglue/centos-rdo-designate-api
   name: designate-api
   net: "host"
   restart: always
   env_file:
    - openstack.env
 
-# The central dispatchers that stores data in a database and pushes requests
-# down to pool-manager.
+# The central dispatches the API requests and pushes requests further down to
+# pool-manager and the database for storage.
 designatecentral:
-  image: kollaglue/centos-rdo-designate-central:90ae33a
+  image: kollaglue/centos-rdo-designate-central
   name: designate-central
   net: "host"
   restart: always
   env_file:
    - openstack.env
 
-# The pool-manager with a bind9 backend. This is state storage.
-designatepoolmanagerbind9data:
-  image: kollaglue/centos-rdo-designate-poolmanager-bind9-data:90ae33a
-  name: designate-poolmanager-bind9data
+# The pool-manager will push new zones to the backend so they can slave them.
+designatepoolmanager:
+  image: kollaglue/centos-rdo-designate-poolmanager
+  name: designate-poolmanager
+  net: "host"
+  restart: always
+  env_file:
+    - openstack.env
+
+# Bind9 backend and state storage.
+designatebackendbind9data:
+  image: kollaglue/centos-rdo-designate-backend-bind9-data
+  name: designate-backend-bind9-data
   restart: on-failure
 
-# The actual pool-manager and named processes run here. Bind will be running
-# slave for alle Designate managed zones.
-designatepoolmanagerbind9:
-  image: kollaglue/centos-rdo-designate-poolmanager-bind9:90ae33a
-  name: designate-poolmanager-bind9
+designatebackendbind9:
+  image: kollaglue/centos-rdo-designate-backend-bind9
+  name: designate-backend-bind9
   net: "host"
   restart: always
   env_file:
     - openstack.env
   volumes_from:
-    - designatepoolmanagerbind9data
+    - designatebackendbind9data
 
 # The MDNS service acts as the primary (or master) nameserver and uses
-# AXFR/IXFR commands to instruct the nameserver, in our case bind9.
+# AXFR/IXFR commands to inform the backend (bind9) about updates.
 designatemdns:
-  image: kollaglue/centos-rdo-designate-mdns:90ae33a
+  image: kollaglue/centos-rdo-designate-mdns
   name: designate-mdns
   net: "host"
   restart: always
@@ -48,7 +55,7 @@ designatemdns:
 # Sink listens for events from Nova and Neutron and configures
 # IP-records if required.
 #designatesink:
-#  image: kollaglue/centos-rdo-designate-sink:90ae33a
+#  image: kollaglue/centos-rdo-designate-sink
 #  name: designate-sink
 #  net: "host"
 #  restart: always
