--- a/docker/designate/designate-backend-bind9-data/Dockerfile
+++ b/docker/designate/designate-backend-bind9-data/Dockerfile
@@ -1,4 +1,4 @@
-FROM %%KOLLA_NAMESPACE%%/%%KOLLA_PREFIX%%designate-base:90ae33a
+FROM %%KOLLA_NAMESPACE%%/%%KOLLA_PREFIX%%designate-base:%%KOLLA_TAG%%
 MAINTAINER Kolla Project (https://launchpad.net/kolla)
 
 VOLUME [ "/var/named" ]
