--- a/docker/designate/designate-poolmanager/Dockerfile
+++ b/docker/designate/designate-poolmanager/Dockerfile
@@ -1,6 +1,6 @@
 FROM %%KOLLA_NAMESPACE%%/%%KOLLA_PREFIX%%designate-base:%%KOLLA_TAG%%
 MAINTAINER Kolla Project (https://launchpad.net/kolla)
 
-ADD ./start.sh /start.sh
+ADD start.sh /start.sh
 
 CMD ["/start.sh"]
